fix: fixed some spacing and margins, fix: fixed header message

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -14,7 +14,7 @@ html {
 	}
 
 	@include respond(big-desktop) {
-        font-size: 120%;
+        font-size: 100%;
     }
 }
 
