--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,6 +32,14 @@
 		background-color: $color-primary-dark;
 		padding: 7vh 5vw;
 
+		& h1 {
+			font-size: 3.2rem;
+
+			@include respond(tab-land) {
+				font-size: 5.5rem;
+			}
+		}
+
 		@include respond(tab-port) {
 			grid-column: 6 / -1;
 			grid-row: 1 / 2;
@@ -44,17 +52,6 @@
 
 /*
 .message-heading {
-	font-size: 3.2rem;
 
-	@include respond(tab-land) {
-		font-size: 5.5rem;
-	}
-	@include respond(laptop) {
-		font-size: 7.6rem;
-	}
-
-	@include respond(big-desktop) {
-		font-size: 11.7rem;
-	}
 }
 */
