--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -13,6 +13,7 @@
 
 		&--textarea {
 			max-height: 70rem;
+			min-height: 10rem;
 		}
 	}
 }
